peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/Repurchase_Invoice__c.object-meta.xml
<CustomObject>
    <label>Repurchase Invoice</label>
    <nameField>
        <displayFormat>DINV-{0000}</displayFormat>
        <label>Repurchase Invoice #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repurchase Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>