peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <summarizedField>Invoice_Asset__c.Unit_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Asset__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>