peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Contract_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Attachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Attachment</label>
    <referenceTo>Contract_Attachment__c</referenceTo>
    <relationshipLabel>Repurchase Invoices</relationshipLabel>
    <relationshipName>Repurchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>