peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Customer2__c.field-meta.xml
<CustomField>
    <fullName>Customer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repurchase Invoices (Customer)</relationshipLabel>
    <relationshipName>Repurchase_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>