peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>