peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Dealer_Account2__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repurchase Invoices</relationshipLabel>
    <relationshipName>Repurchase_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>