peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <formula>Contract__r.Dealer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Account</label>
    <type>Text</type>
</CustomField>