peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <formula>Dealer_Account2__r.Dealer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Number</label>
    <type>Text</type>
</CustomField>