peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Invoice_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Request_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Request ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>