peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Netsuite Invoice ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>