peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/PEAC_Solutions_PO_box__c.field-meta.xml
<CustomField>
    <fullName>PEAC_Solutions_PO_box__c</fullName>
    <formula>IF( Contract__r.MNID_Assets__c &gt; 0,

IF( ISBLANK(Contract__r.Remit_To_Address__c), &apos;&apos;, Contract__r.Remit_To_Address__c &amp; BR()) &amp;
IF( ISBLANK(Contract__r.Remit_To_City__c), &apos;&apos;, Contract__r.Remit_To_City__c &amp; &quot;, &quot;)&amp;
IF( ISBLANK(Contract__r.Remit_To_State__c), &apos;&apos;, Contract__r.Remit_To_State__c &amp; &quot;, &quot;)&amp;
IF( ISBLANK(Contract__r.Remit_To_Zip_Code__c ), &apos;&apos;, Contract__r.Remit_To_Zip_Code__c ),


IF( INCLUDES ( Contract__r.Program__c , &apos;XBS&apos; ),
&apos;Xerox Financial Services&apos; &amp; BR() &amp;

&apos;PO Box 7&apos; &amp; BR() &amp;

&apos;Mount Laurel, NJ 08054&apos;,

&apos;MARLIN LEASING CORPORATION DBA PEAC SOLUTIONS&apos; &amp; BR() &amp;

&apos;PO Box 37&apos; &amp; BR() &amp;

&apos;Mt. Laurel, NJ 08054&apos; &amp; BR() &amp;
&apos;ATTN: Vendor Servicing&apos; &amp; BR() &amp;
&apos;1-844-792-2879&apos; &amp; BR() &amp;
&apos;dealerRepurchases@peacsolutions.com&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PEAC Solutions PO box</label>
    <type>Text</type>
</CustomField>