peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <formula>Contract__r.PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO</label>
    <type>Text</type>
</CustomField>