peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Repurchase_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Repurchase_Invoice_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Repurchase Invoice Email</label>
    <type>TextArea</type>
</CustomField>