peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>