peac_dev/force-app/main/default/objects/Repurchase_Invoice__c/recordTypes/Dealer_Repurchase.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Repurchase</fullName>
    <active>true</active>
    <label>Dealer Repurchase</label>
</RecordType>